--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@node-rs/argon2": "^2.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
