--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/ms": "^2.1.0",
     "@types/node": "^24.5.1",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
@@ -34,6 +35,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.2.0",
+    "ms": "^2.1.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.9"
