--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
     "@types/node": "^24.5.1",
     "drizzle-kit": "^0.31.4",
