--- a/web/package.json
+++ b/web/package.json
@@ -14,16 +14,18 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-router": "^1.131.44",
-    "@tanstack/react-router-devtools": "^1.131.44",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.9",
@@ -31,6 +33,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tanstack/react-devtools": "^0.6.9",
+    "@tanstack/react-query-devtools": "^5.89.0",
+    "@tanstack/react-router-devtools": "^1.131.44",
+    "@tanstack/react-router-ssr-query": "^1.131.48",
     "@tanstack/router-plugin": "^1.131.44",
     "@types/node": "^24.5.1",
     "@types/react": "^19.1.10",
@@ -43,6 +49,7 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "web-vitals": "^5.1.0"
   }
 }
