--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.2.0",
     "ms": "^2.1.3",
