--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@node-rs/argon2": "^2.0.2",
     "axios": "^1.12.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -40,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.2.0",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "ua-parser-js": "^2.0.5",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
