--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.1",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
