feat: add meta tags and preview image

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.1",
     "drizzle-kit": "^0.31.4",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
